--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,6 @@
                     </li>
                 </ul>
             </div> 
-
       <div class="content">
             <h1>WELCOME TO MY BAKING RECIPE</h1>
             <p>This website is from Ruben Schneebeli also known as a professional baker and developer.</p>
@@ -30,7 +29,7 @@
 
             </div>
             <div class="button">
-                <a button="button" href="/pictures.html"><span></span> Pictures</a>
+                <a button="button" href="Backrezept/pictures.html"><span></span> Pictures</a>
                 
             </div>
       </div>
