--- a/pictures.html
+++ b/pictures.html
@@ -7,6 +7,10 @@
     <title>pictures</title>
 </head>
 <body>
-<h1>Here you can see picture of the result</h1>
+    <center>
+<h1>Here you can see picture of the result</h1></center>
+<img src="/Bild10.jpg" alt="Bild1">
+<img src="/Bild11.jpg" alt="Bild1">
+
 </body>
 </html>
