--- a/pictures.html
+++ b/pictures.html
@@ -9,8 +9,8 @@
 <body>
     <center>
 <h1>Here you can see picture of the result</h1></center>
-<img src="/Bild10.jpg" alt="Bild1">
-<img src="/Bild11.jpg" alt="Bild1">
+<img src="Bilder/Bild10.jpg" alt="Bild1">
+<img src="Bilder/Bild11.jpg" alt="Bild1">
 
 </body>
 </html>
